--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -35,6 +35,7 @@
   .collection-footer {
     width: 100%;
     height: 5%;
+    margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
