--- a/client/src/pages/checkout/checkout-page.styles.scss
+++ b/client/src/pages/checkout/checkout-page.styles.scss
@@ -6,6 +6,10 @@
   align-items: center;
   margin: 50px auto 0;
 
+  @media screen and (max-width: 800px) {
+    width: 90%;
+  }
+
   .checkout-header {
     width: 100%;
     padding: 10px 0;
@@ -13,6 +17,13 @@
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
 
+    @media screen and (max-width: 800px) {
+      width: 22%
+      &:last-child {
+        width: 12%;
+      }
+    }
+    
     .header-block {
       text-transform: capitalize;
       width: 23%;
